refatoring specifications and migrations
