# src/routes/specifications.routes.ts
@@ -1,16 +1,15 @@
 import { Router } from "express";
 
 import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
-import listSpecificationsController from "../modules/cars/useCases/listSpecification";
+import { ListSpecificationsController } from "../modules/cars/useCases/listSpecification/ListSpecificationsController";
 
 const specificationsRoutes = Router();
 
 const createSpecificationController = new CreateSpecificationController();
+const listSpecificationsController = new ListSpecificationsController();
 
 specificationsRoutes.post("/", createSpecificationController.handle);
 
-specificationsRoutes.get("/", (request, response) => {
-  return listSpecificationsController().handle(request, response);
-});
+specificationsRoutes.get("/", listSpecificationsController.handle);
 
 export { specificationsRoutes };
